--- a/src/sass/components/_text.scss
+++ b/src/sass/components/_text.scss
@@ -114,6 +114,7 @@ dt, dl, dd {
 	a,
 	span {
 		color: $textColor;
+		display: inline;
 	}
 	#metadata & {
 		a, span {
